# apartament_hunting

./: .gitignore  README.md  geo_cache.json  geo_enrich.py  otodom_geo.csv  otodom_raw.csv  pyproject.toml
data/: geocode_cache.json  oferty_geo.csv  otodom_results.csv
processing/: geo_processing.py
scraping/: otodom_scraper.py  otodom_scraping.py
src/: index.html  legal.html  legal.js  offers-without-coords.html  offers-without-coords.js  script.js  statistics.html  statistics.js  style.css
